--- a/Fodinha/Fodinha/MainPage.xaml
+++ b/Fodinha/Fodinha/MainPage.xaml
@@ -11,20 +11,13 @@
         <StackLayout x:Name="AddPlayersStack"
                      IsVisible="True">
             <Label Text="Adicionar jogadores"
-                   FontAttributes="Bold"
-                   FontSize="26"
-                   Margin="20"
-                   TextColor="{StaticResource DarkBlue}"/>
+                   Style="{StaticResource TitleLabel}"/>
             <Entry x:Name="NameOfPlayerEntry"
                    Margin="20,0"
                    Placeholder="Nome do jogador"/>
             <Button Text="+ adicionar mais jogadores"
                     Clicked="AddNewPlayer"
-                    FontAttributes="Bold"
-                    Margin="20,8"
-                    Padding="16,8"
-                    TextColor="White"
-                    BackgroundColor="{StaticResource MediumBlue}"/>
+                    Style="{StaticResource MediumButton}"/>
             <Label x:Name="PlayersLabel"
                    IsVisible="false"
                    Margin="20,20,0,0"
@@ -47,23 +40,12 @@
             </ListView>
             <Button Text="Tudo pronto!"
                     Clicked="FinishAddPlayers"
-                    VerticalOptions="End"
-                    HorizontalOptions="Center"
-                    FontAttributes="Bold"
-                    Margin="20,8"
-                    Padding="16,8"
-                    CornerRadius="20"
-                    TextColor="{StaticResource Ice}"
-                    BackgroundColor="{StaticResource DarkBlue}"/>
-            <Label FontSize="Small"
-                    Margin="20,0,20,20"
-                    TextColor="#6c757d"
-                    HorizontalTextAlignment="Center"
-                    VerticalOptions="End">
+                    Style="{StaticResource CornerButton}"/>
+            <Label Style="{StaticResource InfoLabel}">
                 <Label.FormattedText>
                     <FormattedString>
                         <Span Text="&#x2139;"/>
-                        <Span Text=" Fodinha é um jogo que pode ser jogado com 3 a 6 jogadores (é possível jogar com mais, só que é necessário utilizar dois ou mais baralhos). Clique aqui e acesse as regras."/>
+                        <Span Text=" Fodinha é um jogo que pode ser jogado com 3 a 6 pessoas (é possível jogar com mais, só que é necessário utilizar dois ou mais baralhos). Clique aqui e acesse as regras."/>
                     </FormattedString>
                 </Label.FormattedText>
                 <Label.GestureRecognizers>
@@ -75,29 +57,18 @@
                      IsVisible="False">
             <StackLayout VerticalOptions="CenterAndExpand">
                 <Label Text="Adicionar vida dos jogadores"
-                       FontAttributes="Bold"
-                       FontSize="26"
-                       Margin="20"
-                       TextColor="{StaticResource DarkBlue}"/>
+                       Style="{StaticResource TitleLabel}"/>
                 <Entry x:Name="LifeOfPlayerEntry"
                        Margin="20,0"
                        Placeholder="Vida dos jogadores"/>
                 <Button Text="Tudo pronto!"
                         Clicked="AddLifePlayers"
-                        FontAttributes="Bold"
-                        Margin="20,8"
-                        Padding="16,8"
-                        TextColor="White"
-                        BackgroundColor="{StaticResource DarkBlue}"/>
-                <Label FontSize="Small"
-                       Margin="40,0"
-                       TextColor="#6c757d"
-                       HorizontalTextAlignment="Center"
-                       VerticalOptions="EndAndExpand">
+                        Style="{StaticResource DarkButton}"/>
+                <Label Style="{StaticResource InfoLabel}">
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="&#x2139;"/>
-                            <Span Text=" Cada participante começa o jogo com um número x de vidas e vai perdendo cada uma, conforme erra o palpite nas rodadas. Normalmente cada jogador começa com 5 vidas."/>
+                            <Span Text=" Cada participante começa o jogo com um número de vidas e vai perdendo cada uma, conforme erra o palpite nas rodadas. Normalmente cada jogador começa com 5 vidas."/>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
